--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ http-types = "2.12.0"
 log = "0.4.17"
 serde = { version = "1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
-tide = { version = "0.16.0", default-features = false, features = ["cookies"] }
+tide = { version = "0.17.0-beta.1", default-features = false, features = ["cookies"] }
 time = { version = "0.2.6", default-features = false, features = ["std"] }
